--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,59 +1,28 @@
-name: Pluto TV Data Updater
+- run: npm ci          # faster & more reliable in CI than npm install
 
-on:
-  schedule:
-    - cron: '0 */12 * * *'
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+      - name: Run Pluto TV Data Generator
+        run: node index 2>&1 | tee generation.log
 
-permissions:
-  contents: write
-
-jobs:
-  update-data:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          token: ${{ secrets.GITHUB_TOKEN }}
-      
-      - name: Use Node.js LTS
-        uses: actions/setup-node@v4
-        with:
-          node-version: 'lts/*'
-          cache: 'npm'
-      
-      - run: npm install
-      - run: node index
-      
-      - name: List generated files (for debugging)
-        run: ls -la *.m3u8 *.xml 2>/dev/null || echo "No files found"
-      
-      - name: Setup Git
+      - name: 🐛 Full Debug – What Actually Happened?
         run: |
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "actions@github.com"
-          git fetch origin main
-          git checkout main
-      
-      - name: Commit and Push Updates
-        run: |
-          # Add ALL modified files (including package-lock.json)
-          git add -A
+          echo "📍 Working directory: $(pwd)"
+          echo "📋 All files in root:"
+          ls -la
           
-          # Check if there are actual changes to commit
-          if git diff --staged --quiet; then
-            echo "No changes to commit"
-          else
-            git commit -m "Auto-update Pluto TV data [$(date +'%Y-%m-%d %H:%M')]"
-            
-            # Pull latest changes with rebase
-            git pull --rebase origin main
-            
-            # Push changes
-            git push origin main
-          fi
+          echo -e "\n🔍 Searching for generated files (recursive):"
+          find . -name "*.m3u*" -o -name "*.xml" | sort || echo "None found"
+          
+          echo -e "\n📊 Git status:"
+          git status --short
+          
+          echo -e "\n🗒️  Last 30 lines of script output:"
+          tail -30 generation.log
 
+      - name: Commit & Push Updates (if any)
+        uses: stefanzweifel/git-auto-commit-action@v5
+        with:
+          commit_message: "Auto-update Pluto TV data [$(date +'%Y-%m-%d %H:%M')]"
+          file_pattern: "*.m3u8 *.xml **/*.m3u8 **/*.xml"   # catches root + subdirs
+          commit_user_name: GitHub Actions
+          commit_user_email: actions@github.com
+          commit_author: GitHub Actions <actions@github.com>
