--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,38 +19,40 @@ jobs:
         with:
           fetch-depth: 0
           token: ${{ secrets.GITHUB_TOKEN }}
-
+      
       - name: Use Node.js LTS
         uses: actions/setup-node@v4
         with:
           node-version: 'lts/*'
           cache: 'npm'
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Run Pluto TV Updater
-        run: node index 2>&1 | tee generation.log
-
-      - name: Debug - Show generated files and status
+      
+      - run: npm install
+      - run: node index
+      
+      - name: List generated files (for debugging)
+        run: ls -la *.m3u8 *.xml 2>/dev/null || echo "No files found"
+      
+      - name: Setup Git
         run: |
-          echo "Working directory: $(pwd)"
-          echo "=== All files in root ==="
-          ls -la
-
-          echo -e "\n=== Searching for .m3u8 and .xml files ==="
-          find . -name "*.m3u*" -o -name "*.xml" | head -20 || echo "No matching files found"
-
-          echo -e "\n=== Git status ==="
-          git status --short
-
-          echo -e "\n=== Last 30 lines of script output ==="
-          tail -30 generation.log || echo "No log file"
-
-      - name: Commit and Push Changes
-        uses: stefanzweifel/git-auto-commit-action@v5
-        with:
-          commit_message: "Auto-update Pluto TV data [$(date +'%Y-%m-%d %H:%M')]"
-          file_pattern: "*.m3u8 *.xml **/*.m3u8 **/*.xml"
-          commit_user_name: GitHub Actions
-          commit_user_email: actions@github.com
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+          git fetch origin main
+          git checkout main
+      
+      - name: Commit and Push Updates
+        run: |
+          # Add ALL modified files (including package-lock.json)
+          git add -A
+          
+          # Check if there are actual changes to commit
+          if git diff --staged --quiet; then
+            echo "No changes to commit"
+          else
+            git commit -m "Auto-update Pluto TV data [$(date +'%Y-%m-%d %H:%M')]"
+            
+            # Pull latest changes with rebase
+            git pull --rebase origin main
+            
+            # Push changes
+            git push origin main
+          fi
