--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,7 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+  workflow_dispatch:   # ← allows manual test
 
 permissions:
   contents: write
@@ -17,42 +18,28 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          fetch-depth: 0
           token: ${{ secrets.GITHUB_TOKEN }}
-      
+
       - name: Use Node.js LTS
         uses: actions/setup-node@v4
         with:
           node-version: 'lts/*'
           cache: 'npm'
-      
-      - run: npm install
-      - run: node index
-      
-      - name: List generated files (for debugging)
-        run: ls -la *.m3u8 *.xml 2>/dev/null || echo "No files found"
-      
-      - name: Setup Git
-        run: |
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "actions@github.com"
-          git fetch origin main
-          git checkout main
-      
-      - name: Commit and Push Updates
-        run: |
-          # Add ALL modified files (including package-lock.json)
-          git add -A
-          
-          # Check if there are actual changes to commit
-          if git diff --staged --quiet; then
-            echo "No changes to commit"
-          else
-            git commit -m "Auto-update Pluto TV data [$(date +'%Y-%m-%d %H:%M')]"
-            
-            # Pull latest changes with rebase
-            git pull --rebase origin main
-            
-            # Push changes
-            git push origin main
-          fi
+
+      - run: npm ci
+
+      - name: Generate Pluto TV files
+        run: node index 2>&1 | tee generation.log
+
+      - name: Upload to Latest Release
+        uses: softprops/action-gh-release@v2
+        with:
+          tag_name: latest
+          name: Latest Pluto TV Data
+          body: "Auto-generated Pluto TV playlists & EPG (updated ${{ github.event.repository.updated_at }})"
+          files: |
+            plutotv_*.m3u8
+            plutotv_*.xml
+          make_latest: true
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
